; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_network.c_addr_resolve_or_parse_ip.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_network.c_addr_resolve_or_parse_ip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @addr_resolve_or_parse_ip(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = call i32 @addr_resolve(i8* %8, i32* %9, i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %20, label %13

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @addr_parse_ip(i8* %14, i32* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %21

19:                                               ; preds = %13
  br label %20

20:                                               ; preds = %19, %3
  store i32 1, i32* %4, align 4
  br label %21

21:                                               ; preds = %20, %18
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @addr_resolve(i8*, i32*, i32*) #1

declare dso_local i32 @addr_parse_ip(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
